# gshow

./: LICENSE  README.md  gshow.cabal  hie.yaml  stack.yaml
exe/: Main.hs
src/: Lib.hs
test/: Spec.hs
