cabal-version:       3.0
name:                gshow
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/AbsoluteNikola/gshow#readme
license:             MIT
license-file:        LICENSE
author:              Nikolay Rulev
maintainer:          nikolayr2001@gmail.com
copyright:           Nikolay Rulev
category:            Web
build-type:          Simple
extra-source-files:  README.md

common common-options
  default-language: Haskell2010

  build-depends:
      base >= 4.7 && < 5
    , bytestring ^>= 0.10
    , mtl ^>= 2.2
    , relude ^>= 1.0.0.0
    , stm >= 2.4 && < 2.6
    , text ^>= 1.2
    , transformers ^>= 0.5
    , unordered-containers >= 0.2.7 && < 0.3

  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DuplicateRecordFields
    GADTs
    ImportQualifiedPost
    KindSignatures
    MultiParamTypeClasses
    NoImplicitPrelude
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeOperators

  ghc-options: -Wall -Wno-implicit-prelude

library
  import: common-options
  hs-source-dirs: src
  build-depends:
  exposed-modules:
    Lib

executable gshow
  import: common-options
  hs-source-dirs:      exe
  main-is:             Main.hs
  build-depends:
    base >= 4.7 && < 5
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

test-suite gshow-test
  import: common-options
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
      gshow
    , tasty
    , tasty-hunit
